--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -38,4 +38,4 @@ jobs:
         if: github.event_name == 'push' && startsWith(github.event.ref, 'refs/tags')
         with:
           user: __token__
-          password: ${{ secrets.PYPI_API_TOKEN2 }}
+          password: ${{ secrets.SPIMPLE_TOKEN }}
