--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,10 +4,11 @@ on: [pull_request]
 
 jobs:
   test:
-    runs-on: ubuntu-latest
+    runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        python-version: ["3.7", "3.8", "3.9"]
+        os: [ ubuntu-20.04, ubuntu-22.04 ]
+        python-version: [3.8, 3.9, 3.10]
 
     steps:
       - name: Set up Python ${{ matrix.python-version }}
