--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,8 +7,8 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ ubuntu-20.04, ubuntu-22.04 ]
-        python-version: ["3.8", "3.9", "3.10"]
+        os: [ ubuntu-22.04, ubuntu-24.04 ]
+        python-version: ["3.10", "3.11", "3.12"]
 
     steps:
       - name: Set up Python ${{ matrix.python-version }}
@@ -21,14 +21,18 @@ jobs:
         with:
           fetch-depth: 1
 
-      - name: Upgrade pip and setuptools
-        run: python -m pip install -U pip setuptools
+      - name: Install Poetry
+        uses: snok/install-poetry@v1
+        with:
+          version: latest
+          virtualenvs-create: true
+          virtualenvs-in-project: true
 
-      - name: Install spimple
-        run: python -m pip install .[testing]
+      - name: Install dependencies
+        run: poetry install
 
       - name: Run tests
-        run: py.test -s -vvv tests/
+        run: poetry run pytest -s -vvv tests/
 
   deploy:
     needs: [test]
