make pytest a dev dependency and remove unnecessary return statement

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,11 +16,13 @@ classifiers = [
 python = ">=3.10, <3.13"
 omegaconf = "*"
 katbeam = "*"
-pytest = "^6.2.2"
 pyscilog = "^0.1.2"
 codex-africanus = {extras = ["complete"], version = "*"}
 dask-ms = {extras = ["xarray"], version = ">=0.2.22"}
 dask = {extras = ["array"], version = "<=2024.10"}
+
+[tool.poetry.group.dev.dependencies]
+pytest = "^8.0.0"
 
 [tool.poetry.scripts]
 spimple-imconv = "spimple.apps.image_convolver:image_convolver"
