--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,8 @@ pyscilog = "^0.1.2"
 codex-africanus = {extras = ["complete"], version = "*"}
 dask-ms = {extras = ["xarray"], version = ">=0.2.22"}
 dask = {extras = ["array"], version = "<=2024.10"}
+reproject = "*"
+ray = {extras = ["default"], version = "*"}
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.0.0"
@@ -28,6 +30,7 @@ pytest = "^8.0.0"
 spimple-imconv = "spimple.apps.image_convolver:image_convolver"
 spimple-spifit = "spimple.apps.spi_fitter:spi_fitter"
 spimple-binterp = "spimple.apps.power_beam_maker:power_beam_maker"
+spimple-mosaic = "spimple.apps.mosaic:mosaic"
 
 [build-system]
 requires = ["poetry-core"]
