--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -22,16 +22,20 @@ jobs:
         with:
           python-version: '3.x'
 
-      - name: Install latest setuptools, wheel, pip
-        run: python3 -m pip install -U pip setuptools wheel
+      - name: Install Poetry
+        uses: snok/install-poetry@v1
+        with:
+          version: latest
+          virtualenvs-create: true
+          virtualenvs-in-project: true
 
       - name: Checkout source
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
         with:
           fetch-depth: 1
 
       - name: Build distributions
-        run: python setup.py sdist bdist_wheel
+        run: poetry build
 
       - name: Publish distribution 📦 to PyPI
         uses: pypa/gh-action-pypi-publish@master
