--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,26 +28,22 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
 
-      - name: Install Poetry
-        uses: snok/install-poetry@v1
+      - name: Install uv
+        uses: astral-sh/setup-uv@v4
         with:
-          version: latest
-          virtualenvs-create: true
-          virtualenvs-in-project: true
+          version: "latest"
 
-      - name: Load cached venv
-        id: cached-poetry-dependencies
+      - name: Set up uv cache
         uses: actions/cache@v4
         with:
-          path: .venv
-          key: venv-${{ runner.os }}-${{ matrix.python-version }}-${{ hashFiles('**/poetry.lock') }}
+          path: ~/.cache/uv
+          key: uv-${{ runner.os }}-${{ matrix.python-version }}-${{ hashFiles('**/uv.lock') }}
 
       - name: Install dependencies
-        if: steps.cached-poetry-dependencies.outputs.cache-hit != 'true'
-        run: poetry install --with dev
+        run: uv sync --extra dev
 
       - name: Run tests
-        run: poetry run pytest -s -vvv tests/
+        run: uv run pytest -s -vvv tests/
 
   deploy:
     needs: [test]
@@ -69,15 +65,13 @@ jobs:
         with:
           python-version: '3.x'
 
-      - name: Install Poetry
-        uses: snok/install-poetry@v1
+      - name: Install uv
+        uses: astral-sh/setup-uv@v4
         with:
-          version: latest
-          virtualenvs-create: true
-          virtualenvs-in-project: true
+          version: "latest"
 
       - name: Build distributions
-        run: poetry build
+        run: uv build
 
       - name: Publish distribution 📦 to PyPI
         if: startsWith(github.ref, 'refs/tags/')
