Fix CI issues and add initial mosaicing functionality (#26)
* add missing imports, don't use dask by default

* allow 3.8

* select specific axes instead of squeezing in binterp

* avoid zero chunks in spifit

* create new header with correct freq axis in binterp (#24)

* create new header with correct freq axis in binterp

* switch to pyproject.toml

* update project to use poetry and upgrade testing matrix

* actally add pyproject.toml

* pin python between 3.10 and 3.12 and fix dask-ms version

* convert ant_scale to dask array if using dask for beam interpolation

* 📝 Add docstrings to `binterp-fixes` (#25)

Docstrings generation was requested by @landmanbester.

* https://github.com/landmanbester/spimple/pull/21#issuecomment-2948774990

The following files were modified:

* `spimple/apps/power_beam_maker.py`
* `spimple/apps/spi_fitter.py`
* `spimple/utils.py`

Co-authored-by: coderabbitai[bot] <136622811+coderabbitai[bot]@users.noreply.github.com>

* Update .github/workflows/publish.yml

Co-authored-by: coderabbitai[bot] <136622811+coderabbitai[bot]@users.noreply.github.com>

* make pytest a dev dependency and remove unnecessary return statement

* add option to imconv write out beam**2 image for mosaicing

* allow PA and BPA keywords in header

* test claude code fix

* add mosaic app

* comment katpoint import

* split out fits utils into a separate file. Don't use load_fits/save_fits in mosaic app

* add warning if intrepolating outside beam freq limits

* PEP 621 compliance + tbump

* switch to uv instead of poetry

* fix import issues

* add dependabot

---------

Co-authored-by: coderabbitai[bot] <136622811+coderabbitai[bot]@users.noreply.github.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,34 +1,90 @@
-[tool.poetry]
+[project]
 name = "spimple"
 version = "0.0.4"
 description = "Radio astronomy image post-processing tools"
-authors = ["Landman Bester <lbester@sarao.ac.za>"]
+authors = [
+    {name = "Landman Bester", email = "lbester@sarao.ac.za"}
+]
 readme = "README.md"
-homepage = "https://github.com/landmanbester/spimple"
-license = "MIT"
+license = {text = "MIT"}
+requires-python = ">=3.10, <3.13"
 classifiers = [
     "Programming Language :: Python :: 3",
     "License :: OSI Approved :: MIT License",
     "Operating System :: OS Independent",
 ]
+dependencies = [
+    "omegaconf",
+    "katbeam",
+    "pyscilog>=0.1.2",
+    "codex-africanus[complete]",
+    "dask-ms[xarray]>=0.2.22",
+    "dask[array]<=2024.10",
+    "reproject",
+    "ray[default]",
+]
 
-[tool.poetry.dependencies]
-python = ">=3.10, <3.13"
-omegaconf = "*"
-katbeam = "*"
-pyscilog = "^0.1.2"
-codex-africanus = {extras = ["complete"], version = "*"}
-dask-ms = {extras = ["xarray"], version = ">=0.2.22"}
-dask = {extras = ["array"], version = "<=2024.10"}
+[project.urls]
+Homepage = "https://github.com/landmanbester/spimple"
 
-[tool.poetry.group.dev.dependencies]
-pytest = "^8.0.0"
+[project.optional-dependencies]
+dev = [
+    "pytest>=8.0.0",
+    "tbump>=6.11.0",
+]
 
-[tool.poetry.scripts]
+[project.scripts]
 spimple-imconv = "spimple.apps.image_convolver:image_convolver"
 spimple-spifit = "spimple.apps.spi_fitter:spi_fitter"
 spimple-binterp = "spimple.apps.power_beam_maker:power_beam_maker"
+spimple-mosaic = "spimple.apps.mosaic:mosaic"
 
 [build-system]
-requires = ["poetry-core"]
-build-backend = "poetry.core.masonry.api"
+requires = ["hatchling"]
+build-backend = "hatchling.build"
+
+[tool.tbump]
+github_url = "https://github.com/landmanbester/spimple"
+
+[tool.tbump.version]
+current = "0.0.4"
+
+# Example of a semver regexp.
+# Make sure this matches current_version before
+# using tbump
+regex = '''
+  (?P<major>\d+)
+  \.
+  (?P<minor>\d+)
+  \.
+  (?P<patch>\d+)
+  '''
+
+[tool.tbump.git]
+message_template = "Bump to {new_version}"
+tag_template = "v{new_version}"
+
+# For each file to patch, add a [[tool.tbump.file]] config
+# section containing the path of the file, relative to the
+# tbump.toml location.
+[[tool.tbump.file]]
+src = "pyproject.toml"
+search = 'version = "{current_version}"'
+
+[[tool.tbump.file]]
+src = "spimple/__init__.py"
+search = "__version__='{current_version}'"
+
+# You can specify a list of commands to
+# run after the files have been patched
+# and before the git commit is made
+
+#  [[tool.tbump.before_commit]]
+#  name = "check changelog"
+#  cmd = "grep -q {new_version} Changelog.rst"
+
+# Or run some commands after the git tag and the branch
+# have been pushed:
+#  [[tool.tbump.after_push]]
+#  name = "publish"
+#  cmd = "./publish.sh"
