--- a/src/spimple/cabs/binterp.yml
+++ b/src/spimple/cabs/binterp.yml
@@ -1,47 +1,45 @@
 cabs:
   binterp:
     flavour: python
-    command: (spimple.cli.binterp)binterp
+    command: (spimple.core.binterp)binterp
     info: Interpolate a primary beam model onto the coordinate grid of a FITS image.
     policies:
       pass_missing_as_none: true
     inputs:
       image:
+        info: A fits image providing the coordinates to interpolate to
         dtype: List[str]
-        info: ''
-        required: true
-        policies:
-          repeat: list
-      output_filename:
-        dtype: File
-        info: ''
         required: true
       ms:
-        dtype: str
-        info: ''
-        required: false
+        info: Measurement sets used to make the image. Used to get paralactic angles
+          if doing primary beam correction. Pass as comma-separated string.
+        dtype: MS
       field:
+        info: Field ID
         dtype: int
-        info: ''
-        required: true
+        default: 0
       beam_model:
-        dtype: str
-        info: ''
-        required: false
+        info: Fits beam model to use. It is assumed that the pattern is path_to_beam/name_corr_re/im.fits.
+          Provide only the path up to name e.g. /home/user/beams/meerkat_lband. Patterns
+          matching corr are determined automatically. Only real and imaginary beam
+          models currently supported.
+        dtype: File
       sparsify_time:
+        info: Used to select a subset of time
         dtype: int
-        info: ''
-        required: true
+        default: 10
       nthreads:
-        dtype: str
-        info: ''
-        required: false
+        info: Number of threads to use. Defaults to all available
+        dtype: int
       corr_type:
-        dtype: str
-        info: ''
-        required: true
+        info: Correlation type i.e. linear or circular
+        choices:
+        - linear
+        - circular
+        default: linear
     outputs:
       output_filename:
         dtype: File
         info: '{current.output_filename}.fits'
         required: false
+        implicit: false
