--- a/src/spimple/cabs/imconv.yml
+++ b/src/spimple/cabs/imconv.yml
@@ -1,64 +1,57 @@
 cabs:
   imconv:
     flavour: python
-    command: (spimple.cli.imconv)imconv
+    command: (spimple.core.imconv)imconv
     info: Convolve images to a common resolution with optional primary beam correction.
     policies:
       pass_missing_as_none: true
     inputs:
       image:
+        info: Image to convolve
         dtype: List[str]
-        info: ''
-        required: true
-        policies:
-          repeat: list
-      output_filename:
-        dtype: File
-        info: ''
         required: true
       products:
-        dtype: str
-        info: ''
-        required: true
+        info: "Outputs to write. Letters correspond to: \nc - restoring beam used\
+          \ for convolution \ni - convolved image \nb - average power beam \nw - beam**2\
+          \ weight image to use for mosaicing"
+        default: i
       psf_pars:
-        dtype: str
-        info: ''
-        required: false
+        info: Beam parameters matching FWHM of restoring beam specified as emaj emin
+          pa. By default these are taken from the fits header
+        dtype: Tuple[float, float, float]
       nthreads:
-        dtype: str
-        info: ''
-        required: false
+        info: Number of threads to use. Defaults to all available
+        dtype: int
       circ_psf:
+        info: Flag to convolve with a circularised beam instead of an elliptical one
         dtype: bool
-        info: ''
-        required: false
-        default: --circ-psf
+        default: false
       dilate:
+        info: Dilate the psf-pars in fits header by this amount. Sometimes required
+          for stability.
         dtype: float
-        info: ''
-        required: true
+        default: 1.05
       beam_model:
-        dtype: str
-        info: ''
-        required: false
+        info: Fits beam model to use. Use power_beam_maker to make power beam corresponding
+          to image.
+        dtype: File
       band:
-        dtype: str
-        info: ''
-        required: true
+        info: Band to use with JimBeam. L, UHF or S
+        default: L
       pb_min:
+        info: Set image to zero where primary beam falls below this value
         dtype: float
-        info: ''
-        required: true
+        default: 0.05
       padding_frac:
+        info: Padding fraction for FFTs (half on either side)
         dtype: float
-        info: ''
-        required: true
+        default: 0.5
       out_dtype:
-        dtype: str
-        info: ''
-        required: true
+        info: Data type of output. Default is single precision
+        default: f4
     outputs:
       output_filename:
         dtype: File
         info: '{current.output_filename}.fits'
         required: false
+        implicit: false
